selected Contacts are no longer moving content & added overflow for boardTasks

--- a/style/board/mediaQueryBoard.css
+++ b/style/board/mediaQueryBoard.css
@@ -43,6 +43,7 @@
 
   .tasksInnerContainer {
     flex-direction: row;
+    overflow-x: auto;
   }
 
   .boardButton {
